[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://game/ui/widgets/TeamCountsPanel.gd" id="1_tc"]

[node name="TeamCountsPanel" type="Control"]
anchors_preset = 1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_top = 2.0
offset_right = 70.0
offset_bottom = 24.0
mouse_filter = 2
script = ExtResource("1_tc")

[node name="Center" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="HBox" type="HBoxContainer" parent="Center"]
theme_override_constants/separation = 4

[node name="BlueIcon" type="TextureRect" parent="Center/HBox"]
custom_minimum_size = Vector2(14, 14)
stretch_mode = 5
expand_mode = 1

[node name="BlueCount" type="Label" parent="Center/HBox"]
theme_override_font_sizes/font_size = 14
text = "0"

[node name="Spacer" type="Control" parent="Center/HBox"]
custom_minimum_size = Vector2(14, 0)
mouse_filter = 2

[node name="RedIcon" type="TextureRect" parent="Center/HBox"]
custom_minimum_size = Vector2(14, 14)
stretch_mode = 5
expand_mode = 1

[node name="RedCount" type="Label" parent="Center/HBox"]
theme_override_font_sizes/font_size = 14
text = "0"
